Registration with RegistrationService & UserService

--- a/src/main/resources/templates/pages/confirmation-business.html
+++ b/src/main/resources/templates/pages/confirmation-business.html
@@ -34,15 +34,15 @@
                             <tbody>
                             <tr>
                                 <th scope="row" width="50%">Bedrijfsnaam</th>
-                                <td th:text="*{personLegal.companyName}"></td>
+                                <td th:text="*{legalPerson.companyName}"></td>
                             </tr>
                             <tr>
                                 <th scope="row" width="50%">KvK-nummer</th>
-                                <td th:text="*{personLegal.kvkNumber}"></td>
+                                <td th:text="*{legalPerson.kvkNumber}"></td>
                             </tr>
                             <tr>
                                 <th scope="row" width="50%">Btw-nummer</th>
-                                <td th:text="*{personLegal.vatNumber}"></td>
+                                <td th:text="*{legalPerson.vatNumber}"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -55,7 +55,7 @@
                             <tbody>
                             <tr>
                                 <th scope="row" width="50%">Gebruikersnaam</th>
-                                <td th:text="*{customer.username}"></td>
+                                <td th:text="*{customer.userName}"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -70,19 +70,19 @@
                             <tbody>
                             <tr>
                                 <th scope="row" width="50%">Postcode</th>
-                                <td th:text="*{personLegal.postalCode}"></td>
+                                <td th:text="*{legalPerson.postalCode}"></td>
                             </tr>
                             <tr>
                                 <th scope="row" width="50%">Huisnummer + toevoeging</th>
-                                <td th:text="*{personLegal.homeNumber}"></td>
+                                <td th:text="*{legalPerson.homeNumber}"></td>
                             </tr>
                             <tr>
                                 <th scope="row" width="50%">Straat</th>
-                                <td th:text="*{personLegal.street}"></td>
+                                <td th:text="*{legalPerson.street}"></td>
                             </tr>
                             <tr>
                                 <th scope="row" width="50%">Plaats</th>
-                                <td th:text="*{personLegal.residence}"></td>
+                                <td th:text="*{legalPerson.residence}"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -96,28 +96,34 @@
                 <div class="pt-5 pb-5" id="accordion">
                     <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
                          id="collapseOne">
-                        <form action="#" class="row" method="post"
+                        <form action="#" class="row needs-validation" method="post" novalidate
                               th:action="@{/registratie-zakelijk}" th:object="${registrationDto}">
                             <div class="col-md-12 mt-2 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Bedrijfsgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="companyName">Bedrijfsnaam</label>
-                                <input class="form-control" id="companyName" name="companyName"
-                                       th:field="*{personLegal.companyName}"
-                                       type="text"/>
+                                <input class="form-control" id="companyName" name="companyName" required
+                                       th:field="*{legalPerson.companyName}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="kvkNumber">KvK-nummer</label>
-                                <input class="form-control" id="kvkNumber" name="kvkNumber"
-                                       th:field="*{personLegal.kvkNumber}"
-                                       type="text"/>
+                                <input class="form-control" id="kvkNumber" name="kvkNumber" required
+                                       th:field="*{legalPerson.kvkNumber}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="vatNumber">Btw-nummer</label>
-                                <input class="form-control" id="vatNumber" name="vatNumber"
-                                       th:field="*{personLegal.vatNumber}"
-                                       type="text"/>
+                                <input class="form-control" id="vatNumber" name="vatNumber" required
+                                       th:field="*{legalPerson.vatNumber}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
@@ -125,50 +131,68 @@
                             <div class="col-md-2 form-group">
                                 <label for="postalCode_legal">Postcode</label>
                                 <input aria-describedby="postalCode_legalHelp" class="form-control"
-                                       id="postalCode_legal"
-                                       name="postalCode_legal" th:field="*{personLegal.postalCode}"
-                                       type="text"/>
+                                       id="postalCode_legal" name="postalCode_legal" required
+                                       th:field="*{legalPerson.postalCode}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                                 <small class="form-text text-muted" id="postalCode_legalHelp">Format:
                                     1234AB</small>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="homeNumber_legal">Huisnr.</label>
                                 <input aria-describedby="homeNumber_legalHelp" class="form-control"
-                                       id="homeNumber_legal"
-                                       name="homeNumber_legal" th:field="*{personLegal.homeNumber}"
-                                       type="text"/>
+                                       id="homeNumber_legal" name="homeNumber_legal" required
+                                       th:field="*{legalPerson.homeNumber}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                                 <small class="form-text text-muted" id="homeNumber_legalHelp">Format: 123, 12b,
                                     123-I</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="street_legal">Straat</label>
-                                <input class="form-control" id="street_legal" name="street_legal"
-                                       th:field="*{personLegal.street}"
-                                       type="text"/>
+                                <input class="form-control" id="street_legal" name="street_legal" required
+                                       th:field="*{legalPerson.street}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="residence_legal">Plaats</label>
-                                <input class="form-control" id="residence_legal" name="residence_legal"
-                                       th:field="*{personLegal.residence}" type="text"/>
+                                <input class="form-control" id="residence_legal" name="residence_legal" required
+                                       th:field="*{legalPerson.residence}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="username_legal">Gebruikersnaam</label>
-                                <input class="form-control" id="username_legal" name="username_legal"
-                                       th:field="*{customer.username}" type="text"/>
+                                <input class="form-control" id="username_legal" name="username_legal" required
+                                       th:field="*{customer.userName}" type="text"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_legal">Wachtwoord</label>
-                                <input class="form-control" id="password_legal" name="password_legal"
+                                <input class="form-control" id="password_legal" name="password_legal" required
                                        th:field="*{customer.password}" type="password"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_legal_confirmation">Wachtwoord</label>
                                 <input class="form-control" id="password_legal_confirmation"
-                                       name="password_legal_confirmation" th:field="*{passwordConfirmation}"
+                                       name="password_legal_confirmation" required th:field="*{passwordConfirmation}"
                                        type="password"/>
+                                <div class="invalid-feedback">
+                                    Hier custom error-message
+                                </div>
                             </div>
                             <div class="col-md-12 mt-3">
                                 <div class="col-md-6 pl-0">
@@ -188,19 +212,24 @@
 </div> <!-- /container - #page -->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
 <script>
-    const $buttonPrivate = $("#private");
-    const $buttonLegal = $("#legal");
-
-    $buttonLegal.on('click', function (event) {
-        event.preventDefault();
-        $(this).toggleClass('active');
-        $buttonPrivate.toggleClass('active');
-    });
-    $buttonPrivate.on('click', function (event) {
-        event.preventDefault();
-        $(this).toggleClass('active');
-        $buttonLegal.toggleClass('active');
-    });
+    // Script for custom form-validation
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all forms for custom validation
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over the forms and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
 </script>
 </body>
 </html>
