--- a/src/main/resources/templates/pages/rekeningoverzicht.html
+++ b/src/main/resources/templates/pages/rekeningoverzicht.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Rekeningoverzicht van:</h1>
-    <h2 th:text="${customerWithAccountOverview.getCustomer().getUsername()}">naam</h2>
+    <h2 th:text="${customerWithAccountOverview.getCustomer().getUserName()}">naam</h2>
     <p th:if="${customerWithAccountOverview.getAccountList().isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
 
     <table class="table table-bordered" th:unless="${customerWithAccountOverview.getAccountList().isEmpty()}">
