--- a/src/main/resources/templates/pages/account-overview.html
+++ b/src/main/resources/templates/pages/account-overview.html
@@ -24,7 +24,9 @@
         </thead>
         <tbody>
         <tr th:each="a : ${customerWithAccountOverview.getAccountList()}">
-            <td th:text="${a.iban}"></td>
+            <td>
+                <a href="${a.iban}" th:href="@{/account_details}" th:text="${a.iban}"></a>
+            </td>
             <td> <ul> <li th:each="customerName : ${a.getAccountHolders()}" th:text="${customerName}"></li></ul></td>
             <td th:text="${a.balance}"></td>
         </tr>
