commits voor employee tot zo ver

--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -14,12 +14,15 @@
             <div class="col-md-8 mx-auto">
                 <h1>Log hier in</h1>
                 <form action="#" th:action="@{/login}" th:object="${customerWithAccountOverview}" method="post">
-                    <!--<input type="hidden" th:field="*{id}" />-->
+                    <!--if (customer == employee) ${employeeDashboard} method="post"-->
+
                     <div class="col-md-6 form-group">
+                        <i class="fa fa-user icon"></i>
                         <label>Gebruikersnaam</label>
                         <input type="text" class="form-control" name="userName" required>
                     </div>
                     <div class="col-md-6 form-group">
+                        <i class="fa fa-key icon"></i>
                         <label>Wachtwoord</label>
                         <input type="password" class="form-control" name="password" required>
                     </div>
