--- a/src/main/resources/templates/pages/account-overview.html
+++ b/src/main/resources/templates/pages/account-overview.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Rekeningoverzicht van:</h1>
-    <h2 th:text="${customerWithAccountOverview.getCustomer().getUserName()}">naam</h2>
+    <h2 th:text="${nameCurrentCus}">naam</h2>
     <p th:if="${customerWithAccountOverview.getAccountList().isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
 
     <table class="table table-bordered"
@@ -25,7 +25,7 @@
         <tbody>
         <tr th:each="a : ${customerWithAccountOverview.getAccountList()}">
             <td th:text="${a.iban}"></td>
-            <td> <ul> <li th:each="customerName : ${a.getAccountHolders()}" th:text="${customerName}"></li></ul></td>
+            <td> <ul> <li th:each="customerName : ${a.getAccountHolderNames()}" th:text="${customerName}"></li></ul></td>
             <td th:text="${a.balance}"></td>
         </tr>
         </tbody>
