--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -57,7 +57,7 @@
                     <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
                         <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>
                         <a class="btn btn-primary mr-2" href="/login">Inloggen klanten</a>
-                        <a class="btn btn-primary mr-2" href="/loginmedewerker">Inloggen medewerker</a>
+                        <a class="btn btn-primary mr-2" href="/loginemployee">Inloggen medewerker</a>
                     </div>
                 </div>
                 <!--<form class="form-inline my-2 my-lg-0">
