--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -12,9 +12,8 @@
     <div class="container-my-3">
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <h1>Log hier in</h1>
-                <form action="#" th:action="@{/login}" th:object="${customerWithAccountOverview}" method="post">
-                    <!--if (customer == employee) ${employeeDashboard} method="post"-->
+                <h1>Welkom klant!</h1>
+                <form action="#" th:action="@{/login}" method="post">
 
                     <div class="col-md-6 form-group">
                         <i class="fa fa-user icon"></i>
